# otel01

./: CMakeLists.txt  cp.bat  kopyala.bat
components/: CMakeLists.txt
data/: config.json  index.html  setup.html  upload.html
main/: idf_component.yml  main.cpp
main/tool/: events.c  http.c  uartcallback.cpp
